--- a/menu.html
+++ b/menu.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
   <title>Cornelius &amp; Cylinder</title>
   <link rel="stylesheet" href="assets/css/styles.css" />
+  <link rel="stylesheet" href="assets/css/lightbox.min.css" />
   <link
       href="https://fonts.googleapis.com/css?family=K2D|Merienda+One"
       rel="stylesheet"
@@ -74,13 +75,18 @@
         <div class="col">
           <div class="menu-item">
             <div class="items">
-              <p class="item-name" id="name1">JUNECI CHEESEBURGER</p>
+              <a
+                href="/assets/img/burger 2.png"
+                data-lightbox="mygallery"
+                data-title="Title"
+              >
+              <p class="item-name" id="name1">JUNEĆI CHEESEBURGER</p></a
+          >
               <p class="item-price">575</p>
             </div>
             <div class="menu-desc">
               <p class="desc-p " id="desc1">
-                junece meso, cedar sir, karamelizovani luk, kiseli krastavcici, iceberg salata, paradajz, panceta
-                /pomfrit, pohovani luk/
+                juneće meso, čedar sir, karamelizovani luk, kiseli krastavčići, iceberg salata, paradajz, pančeta /pomfrit, pohovani luk/
               </p>
             </div>
           </div>
@@ -92,7 +98,7 @@
             </div>
             <div class="menu-desc">
               <p class="desc-p" id="desc2">
-                Angus govedje meso, ementaler, crveni luk, pecurke, iceberg salata, paradajz /pomfrit, pohovani luk/
+                Angus goveđe meso, ementaler, crveni luk, pečurke, iceberg salata, paradajz /pomfrit, pohovani luk/
               </p>
             </div>
           </div>
@@ -104,19 +110,18 @@
             </div>
             <div class="menu-desc">
               <p class="desc-p" id="desc3">
-                cepkano sporo peceno svinjsko meso u BBQ sosu, coleslaw salata /pomfrit/
+                cepkano sporo pečeno svinjsko meso u BBQ sosu, coleslaw salata /pomfrit/
               </p>
             </div>
           </div>
 
           <div class="menu-item">
             <div class="items">
-              <p class="item-name" id="name4">JUNECI BIFTEK NA GRILU (300g)</p>
+              <p class="item-name" id="name4">JUNEĆI BIFTEK NA GRILU (300g)</p>
               <p class="item-price">1.490</p>
             </div>
             <div class="menu-desc">
               <p class="desc-p" id="desc4">
-                pileca krilca u pikantnom buffalo sosu, garlic hleb, sos od plavog sira
               </p>
             </div>
           </div>
@@ -130,7 +135,7 @@
                 </div>
                 <div class="menu-desc">
                   <p class="desc-p" id="desc5">
-                    pileca krilca u pikantnom buffalo sosu, garlic hleb, sos od plavog sira
+                    pileća krilca u pikantnom buffalo sosu, garlic hleb, sos od plavog sira
                   </p>
                 </div>
               </div>
@@ -142,7 +147,7 @@
                   </div>
                   <div class="menu-desc">
                     <p class="desc-p" id="desc6">
-                      sporo pecena, glazirana, kukuruz secerac, coleslaw salata, wedges krompir, BBQ sos
+                      sporo pečena, glazirana, kukuruz šećerac, coleslaw salata, wedges krompir, BBQ sos
                     </p>
                   </div>
                 </div>
@@ -153,7 +158,7 @@
             </div>
             <div class="menu-desc">
               <p class="desc-p" id="desc7">
-                suvo marinirani pileci fileti, kari pirinac sa povrcem
+                suvo marinirani pileći fileti, kari pirinač sa povrćem
               </p>
             </div>
           </div>
@@ -170,7 +175,7 @@
             </div>
             <div class="menu-desc">
               <p class="desc-p" id="desc8">
-                junece i svinjsko meso, zacinjeni wedges krompir, senf
+                juneće i svinjsko meso, začinjeni wedges krompir, senf
               </p>
             </div>
           </div>
@@ -182,7 +187,7 @@
             </div>
             <div class="menu-desc">
               <p class="desc-p" id="desc9">
-                zacinjeni wedges krompir, senf
+                začinjeni wedges krompir, senf
               </p>
             </div>
           </div>
@@ -196,14 +201,14 @@
             </div>
             <div class="menu-desc">
               <p class="desc-p" id="desc10">
-                zacinjeni wedges krompir, senf
+                začinjeni wedges krompir, senf
               </p>
             </div>
           </div>
         </div>
       </div>
 
-      <h2 class="menu-h2" id="special">NESTO SASVIM POSEBNO (ZA 2 OSOBE)</h2>
+      <h2 class="menu-h2" id="special">NEŠTO SASVIM POSEBNO (ZA 2 OSOBE)</h2>
       <div class="menu-row">
         <div class="col">
           <div class="menu-item">
@@ -213,7 +218,7 @@
             </div>
             <div class="menu-desc">
               <p class="desc-p" id="desc11">
-                njeguski prsut, brusketi sa paradajzom, brie sir, suve sljive sa halapenjo paprikom rolovane pancetom, parmezan, marinirani kozji sir, masline
+                njeguški pršut, brusketi sa paradajzom, brie sir, suve šljive sa halapenjo paprikom rolovane pančetom, parmezan, marinirani kozji sir, masline
               </p>
             </div>
           </div>
@@ -239,7 +244,7 @@
             </div>
             <div class="menu-desc">
               <p class="desc-p" id="desc13">
-                tortilja sa piletinom, tortilja sa cili mesom, empanadas, pohovana mozarella, pohovane masline, coleslaw salata, pohovani luk
+                tortilja sa piletinom, tortilja sa čili mesom, empanadas, pohovana mozarella, pohovane masline, coleslaw salata, pohovani luk
               </p>
             </div>
           </div>
@@ -283,15 +288,15 @@
 
   <section class="menu">
     <div class="menu-image" id="soupImg">
-      <h2 class="image-h2 soup">SUPE</h2>
+      <h2 class="image-h2 soup">SUPE I CORBE</h2>
     </div>
     <div class="menu-container">
-      <h2 class="menu-h2 soup">SUPE</h2>
+      <h2 class="menu-h2 soup">SUPE I ČORBE</h2>
       <div class="menu-row">
         <div class="col">
           <div class="menu-item">
             <div class="items">
-              <p class="item-name" id="name16">POTAZ DANA OD POVRCA</p>
+              <p class="item-name" id="name16">POTAŽ DANA OD POVRĆA</p>
               <p class="item-price">225</p>
             </div>
             <div class="menu-desc">
@@ -304,7 +309,7 @@
 
           <div class="menu-item">
             <div class="items">
-              <p class="item-name" id="name17">PILECA SUPA</p>
+              <p class="item-name" id="name17">PILEĆA SUPA</p>
               <p class="item-price">215</p>
             </div>
             <div class="menu-desc">
@@ -317,7 +322,7 @@
         <div class="col">
           <div class="menu-item">
             <div class="items">
-              <p class="item-name" id="name18">TELECA CORBA</p>
+              <p class="item-name" id="name18">TELEĆA CORBA</p>
               <p class="item-price">269</p>
             </div>
             <div class="menu-desc">
@@ -346,14 +351,14 @@
             </div>
             <div class="menu-desc">
               <p class="desc-p" id="desc19">
-                piletina, iceberg salata, dresing, panceta, parmezan
+                piletina, iceberg salata, dresing, pančeta, parmezan
               </p>
             </div>
           </div>
 
           <div class="menu-item">
             <div class="items">
-              <p class="item-name" id="name20">GRCKA SALATA</p>
+              <p class="item-name" id="name20">GRČKA SALATA</p>
               <p class="item-price">395</p>
             </div>
             <div class="menu-desc">
@@ -396,7 +401,7 @@
             </div>
             <div class="menu-desc">
               <p class="desc-p" id="desc23">
-                kinoa, pecena bundeva, baby spanac, crni susam, dresing
+                kinoa, pečena bundeva, baby spanać, crni susam, dresing
               </p>
             </div>
           </div>
@@ -408,7 +413,7 @@
             </div>
             <div class="menu-desc">
               <p class="desc-p" id="desc24">
-                iceberg, rukola, angus govedina, dimljena piletina, panceta, parmezan, ranch sos
+                iceberg, rukola, angus govedina, dimljena piletina, pančeta, parmezan, ranch sos
               </p>
             </div>
           </div>
@@ -450,10 +455,10 @@
 
   <section class="menu">
     <div class="menu-image" id="nacho">
-      <h2 class="image-h2" id="between">NESTO IZMEDJU</h2>
+      <h2 class="image-h2" id="between">NESTO IZMEĐU</h2>
     </div>
     <div class="menu-container">
-      <h2 class="menu-h2" id="notReally">NE BAS GLAVNA JELA</h2>
+      <h2 class="menu-h2" id="notReally">NE BAŠ GLAVNA JELA</h2>
       <div class="menu-row">
         <div class="col">
           <div class="menu-item">
@@ -463,7 +468,7 @@
             </div>
             <div class="menu-desc">
               <p class="desc-p">
-                paradjz, sir, prsut, kulen, panceta
+                paradajz, sir, pršut, kulen, pančeta
               </p>
             </div>
           </div>
@@ -475,7 +480,7 @@
             </div>
             <div class="menu-desc">
               <p class="desc-p">
-                tortilja cips, cili sos sa mesom, kackavalj, topljeni cedar, masline, paradajz, pavlaka, halapenjo
+                tortilja čips, čili sos sa mesom, kačkavalj, topljeni čedar, masline, paradajz, pavlaka, halapenjo
               </p>
             </div>
           </div>
@@ -487,14 +492,14 @@
             </div>
             <div class="menu-desc">
               <p class="desc-p">
-                pomfrit, cili sos sa mesom, masline, topljeni cedar, paradajz, panceta, pavlaka
+                pomfrit, čili sos sa mesom, masline, topljeni čedar, paradajz, pančeta, pavlaka
               </p>
             </div>
           </div>
 
           <div class="menu-item">
             <div class="items">
-              <p class="item-name" id="name30">MOZARELLA STAPICI</p>
+              <p class="item-name" id="name30">MOZARELLA ŠTAPIĆI</p>
               <p class="item-price">369</p>
             </div>
             <div class="menu-desc">
@@ -513,7 +518,7 @@
             </div>
             <div class="menu-desc">
               <p class="desc-p" id="desc31">
-                paradajz, maslinovo ulje, svez bosiljak
+                paradajz, maslinovo ulje, svež bosiljak
               </p>
             </div>
           </div>
@@ -537,14 +542,14 @@
             </div>
             <div class="menu-desc">
               <p class="desc-p" id="desc33">
-                tortilja cips sa tri sosa, salsa, cedar, paradajz sos, guacamole
+                tortilja čips sa tri sosa, salsa, čedar, paradajz sos, guacamole
               </p>
             </div>
           </div>
         </div>
       </div>
 
-      <h2 class="menu-h2" id="sandwich">SENDVICI</h2>
+      <h2 class="menu-h2" id="sandwich">SENDVIČI</h2>
       <div class="menu-row">
         <div class="col">
           <div class="menu-item">
@@ -554,7 +559,7 @@
             </div>
             <div class="menu-desc">
               <p class="desc-p" id="desc34">
-                angus govedje meso, topljeni american cheese, luk, paprika
+                angus goveđe meso, topljeni american cheese, luk, paprika
               </p>
             </div>
           </div>
@@ -564,12 +569,12 @@
         <div class="col">
           <div class="menu-item">
             <div class="items">
-              <p class="item-name" id="name35">CLUB SENDVIC</p>
+              <p class="item-name" id="name35">CLUB SENDVIČ</p>
               <p class="item-price">525</p>
             </div>
             <div class="menu-desc">
               <p class="desc-p" id="desc35">
-                piletina, jaje, panceta, pomfrit
+                piletina, jaje, pančeta, pomfrit
               </p>
             </div>
           </div>
@@ -581,7 +586,7 @@
         <div class="col">
           <div class="menu-item">
             <div class="items">
-              <p class="item-name" id="name36">GRILOVANO POVRCE</p>
+              <p class="item-name" id="name36">GRILOVANO POVRĆE</p>
               <p class="item-price">259</p>
             </div>
             <div class="menu-desc">
@@ -611,7 +616,7 @@
           </div>
           <div class="menu-item">
             <div class="items">
-              <p class="item-name" id="name39">SUNKA (50g)</p>
+              <p class="item-name" id="name39">ŠUNKA (50g)</p>
               <p class="item-price">60</p>
             </div>
             <div class="menu-desc">
@@ -621,7 +626,7 @@
           </div>
           <div class="menu-item">
             <div class="items">
-              <p class="item-name" id="name40">PRSUT (100g)</p>
+              <p class="item-name" id="name40">PRŠUT (100g)</p>
               <p class="item-price">505</p>
             </div>
             <div class="menu-desc">
@@ -685,7 +690,7 @@
           </div>
           <div class="menu-item">
             <div class="items">
-              <p class="item-name" id="name46">PANCETA (30g)</p>
+              <p class="item-name" id="name46">PANČETA (30g)</p>
               <p class="item-price">100</p>
             </div>
             <div class="menu-desc">
@@ -705,7 +710,7 @@
           </div>
           <div class="menu-item">
             <div class="items">
-              <p class="item-name" id="name48">SOS OD SUMSKOG VOCA</p>
+              <p class="item-name" id="name48">SOS OD ŠUMSKOG VOĆA</p>
               <p class="item-price">100</p>
             </div>
             <div class="menu-desc">
@@ -771,12 +776,12 @@
 
           <div class="menu-item">
             <div class="items">
-              <p class="item-name" id="name53">AMERICKE PALACINKE</p>
+              <p class="item-name" id="name53">AMERIČKE PALACINKE</p>
               <p class="item-price">365</p>
             </div>
             <div class="menu-desc">
               <p class="desc-p" id="desc53">
-                sa javorovim sirupom, puterom, sosom od sumskog voca i vanila sladoledom
+                sa javorovim sirupom, puterom, sosom od šumskog voća i vanila sladoledom
               </p>
             </div>
           </div>
@@ -790,7 +795,7 @@
             </div>
             <div class="menu-desc">
               <p class="desc-p" id="desc54">
-                cimet, zuti secer, puter
+                cimet, žuti šećer, puter
               </p>
             </div>
           </div>
@@ -801,7 +806,7 @@
 
   <section class="menu">
     <div class="menu-container">
-      <h2 class="menu-h2" id="cakes">TORTE I KOLACI</h2>
+      <h2 class="menu-h2" id="cakes">TORTE I KOLAČI</h2>
       <div class="menu-row">
         <div class="col">
           <div class="menu-item">
@@ -818,7 +823,7 @@
 
           <div class="menu-item">
             <div class="items">
-              <p class="item-name" id="name55">COKO-MALINA TORTA</p>
+              <p class="item-name" id="name55">ČOKO-MALINA TORTA</p>
               <p class="item-price">360</p>
             </div>
             <div class="menu-desc">
@@ -853,7 +858,7 @@
 
           <div class="menu-item">
             <div class="items">
-              <p class="item-name" id="name57">DUET LESNIK KOLAC</p>
+              <p class="item-name" id="name57">DUET LEŠNIK KOLAC</p>
               <p class="item-price">320</p>
             </div>
             <div class="menu-desc">
@@ -890,6 +895,7 @@
     </div>
   </footer>
 
+  <script src="assets/js/lightbox-plus-jquery.min.js"></script>
   <script src="assets/js/jquery-3.2.1.min.js"></script>
   <script type="text/javascript" src="assets/js/app.js"></script>
   <script type="text/javascript" src="assets/js/translate-menu.js"></script>
