--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           Prvi i jedini Steam Punk restoran u Srbiji.
         </p>
         <a id="lang-more" href="index.html#boxes" class="header-btn click-boxes"
-          >VISE</a
+          >VIŠE</a
         >
         <a href="index.html#boxes" class="header-btn arrow-btn click-boxes"
           ><i class="arrow fa fa-long-arrow-right" aria-hidden="true"></i
@@ -90,7 +90,7 @@
               sit temporibus quaerat ab, totam, nemo dolore aut modi quam culpa
               nihil a!
             </p>
-            <a href="about.html" class="boxes-btn">PROCITAJ VISE</a>
+            <a href="about.html" class="boxes-btn">PROČITAJ VIŠE</a>
           </div>
         </div>
       </div>
@@ -105,7 +105,7 @@
               sit temporibus quaerat ab, totam, nemo dolore aut modi quam culpa
               nihil a!
             </p>
-            <a href="#" class="boxes-btn">PROCITAJ VISE</a>
+            <a href="#" class="boxes-btn">PROČITAJ VIŠE</a>
           </div>
           <div class="boxes-image image-2"></div>
         </div>
@@ -122,7 +122,7 @@
               sit temporibus quaerat ab, totam, nemo dolore aut modi quam culpa
               nihil a!
             </p>
-            <a href="#" class="boxes-btn">PROCITAJ VISE</a>
+            <a href="#" class="boxes-btn">PROČITAJ VIŠE</a>
           </div>
         </div>
       </div>
@@ -139,7 +139,7 @@
             cumque?
           </p>
           <a href="menu.html" class="discover-btn wow fadeInUp"
-            >OTKRIJ NAS MENI</a
+            >OTKRIJ NAŠ MENI</a
           >
         </div>
         <div class="discover-item discover-drinks">
@@ -151,7 +151,7 @@
             cumque?
           </p>
           <a href="menu-caffe.html" class="discover-btn wow fadeInUp"
-            >KARTA PICA</a
+            >KARTA PIĆA</a
           >
         </div>
       </div>
