--- a/gallery.html
+++ b/gallery.html
@@ -109,8 +109,9 @@
             href="/assets/img/bgg1.jpg"
             data-lightbox="mygallery"
             data-title="Title"
-            ><img src="/assets/img/bgg1-small.png" alt=""
-          /></a>
+          >
+            <p>lmao</p></a
+          >
         </div>
       </div>
 
