--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <header>
       <div class="header-content">
-        <h1 class="header-h1">Cornelius &amp; Cylinder.</h1>
+        <h1 class="header-h1">Cornelius &amp; CyliNder.</h1>
         <p class="header-p">
           Prvi i jedini Steam Punk restoran u Srbiji.
         </p>
