--- a/menu.html
+++ b/menu.html
@@ -80,7 +80,8 @@
                 data-lightbox="mygallery"
                 data-title="Title"
               >
-              <p class="item-name" id="name1">JUNEĆI CHEESEBURGER</p></a
+              <p class="item-name" id="name1">JUNEĆI CHEESEBURGER</p><i class="fa fa-camera-retro food-img" aria-hidden="true"></i>
+              </a
           >
               <p class="item-price">575</p>
             </div>
