--- a/menu.html
+++ b/menu.html
@@ -896,6 +896,10 @@
     </div>
   </footer>
 
+  <div class="loader-wrapper">
+    <span class="loader"><span class="loader-inner"></span></span>
+  </div>
+
   <script src="assets/js/lightbox-plus-jquery.min.js"></script>
   <script src="assets/js/jquery-3.2.1.min.js"></script>
   <script type="text/javascript" src="assets/js/app.js"></script>
