--- a/index.html
+++ b/index.html
@@ -262,6 +262,7 @@
     <!-- <script src="assets/js/anime.min.js"></script> -->
     <script type="text/javascript" src="assets/js/wow.js"></script>
     <script type="text/javascript" src="assets/js/app.js"></script>
+    <script type="text/javascript" src="assets/js/translate-menu.js"></script>
     <!-- <script type="text/javascript" src="assets/js/anime.js"></script> -->
   </body>
 </html>
