--- a/menu.html
+++ b/menu.html
@@ -78,11 +78,10 @@
               <a
                 href="/assets/img/burger 2.png"
                 data-lightbox="mygallery"
-                data-title="Title"
-              >
+                data-title="JUNEĆI CHEESEBURGER">
               <p class="item-name" id="name1">JUNEĆI CHEESEBURGER</p><i class="fa fa-camera-retro food-img" aria-hidden="true"></i>
-              </a
-          >
+              </a>
+
               <p class="item-price">575</p>
             </div>
             <div class="menu-desc">
@@ -323,7 +322,14 @@
         <div class="col">
           <div class="menu-item">
             <div class="items">
-              <p class="item-name" id="name18">TELEĆA CORBA</p>
+                <a
+                href="/assets/img/image00005.jpeg"
+                data-lightbox="mygallery"
+                data-title="TELEĆA CORBA">
+                <p class="item-name" id="name18">TELEĆA CORBA</p>
+              <i class="fa fa-camera-retro food-img" aria-hidden="true"></i>
+              </a>
+              
               <p class="item-price">269</p>
             </div>
             <div class="menu-desc">
@@ -347,7 +353,13 @@
         <div class="col">
           <div class="menu-item">
             <div class="items">
-              <p class="item-name" id="name19">CEZAR SALATA</p>
+              <a
+                href="/assets/img/54.jpg"
+                data-lightbox="mygallery"
+                data-title="CEZAR SALATA">
+                <p class="item-name" id="name19">CEZAR SALATA</p>
+              <i class="fa fa-camera-retro food-img" aria-hidden="true"></i>
+              </a>
               <p class="item-price">625</p>
             </div>
             <div class="menu-desc">
