--- a/about.html
+++ b/about.html
@@ -127,6 +127,10 @@
       </div>
     </footer>
 
+    <div class="loader-wrapper">
+      <span class="loader"><span class="loader-inner"></span></span>
+    </div>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.js"></script>
     <script src="assets/js/jquery-3.2.1.min.js"></script>
     <!-- <script src="assets/js/anime.min.js"></script> -->
