--- a/menu.html
+++ b/menu.html
@@ -353,13 +353,7 @@
         <div class="col">
           <div class="menu-item">
             <div class="items">
-              <a
-                href="/assets/img/54.jpg"
-                data-lightbox="mygallery"
-                data-title="CEZAR SALATA">
-                <p class="item-name" id="name19">CEZAR SALATA</p>
-              <i class="fa fa-camera-retro food-img" aria-hidden="true"></i>
-              </a>
+              <p class="item-name" id="name19">CEZAR SALATA</p>
               <p class="item-price">625</p>
             </div>
             <div class="menu-desc">
@@ -409,7 +403,13 @@
 
           <div class="menu-item">
             <div class="items">
-              <p class="item-name" id="name23">KINOA SA BUNDEVOM</p>
+                <a
+                href="/assets/img/54.jpg"
+                data-lightbox="mygallery"
+                data-title="KINOA SA BUNDEVOM">
+                <p class="item-name" id="name23">KINOA SA BUNDEVOM</p>
+              <i class="fa fa-camera-retro food-img" aria-hidden="true"></i>
+              </a>
               <p class="item-price">595</p>
             </div>
             <div class="menu-desc">
