--- a/gallery.html
+++ b/gallery.html
@@ -182,8 +182,8 @@
           ><i class="fa fa-twitter" aria-hidden="true"></i
         ></a>
         <a class="footer-a" href="https://www.instagram.com/cornelius_cylinder/"
-          ><i class="fa fa-instagram" aria-hidden="true"></i
-        ></a>
+          ><i class="fa fa-instagram" aria-hidden="true"></i>
+        </a>
         <!-- <a class="footer-a" href="https://www.youtube.com/channel/UCFRDbxUN5TCokmgwxwPdrXg"><i class="fa fa-youtube-play"
             aria-hidden="true"></i></a> -->
 
