--- a/menu.html
+++ b/menu.html
@@ -26,13 +26,13 @@
         >
       </li>
       <li class="nav-li">
-        <a id="lang-about" class="nav-a" href="index.html#boxes">O NAMA</a>
+        <a id="lang-about" class="nav-a" href="about.html">O NAMA</a>
       </li>
       <li class="nav-li">
         <a id="lang-gallery" class="nav-a" href="gallery.html">GALERIJA</a>
       </li>
       <li class="nav-li click-info">
-        <a id="lang-contact" class="nav-a" href="index.html#info"
+        <a id="lang-contact" class="nav-a" href="menu.html#info"
           >KONTAKT</a
         >
       </li>
@@ -880,6 +880,79 @@
             </div>
           </div>
 
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="info">
+    <div class="flex-container">
+      <div class="info-row">
+        <div class="info-content">
+          <div class="info-text">
+            <p class="inline">4.7</p>
+            <i class="fa fa-star" aria-hidden="true"></i>
+            <i class="fa fa-star" aria-hidden="true"></i>
+            <i class="fa fa-star" aria-hidden="true"></i>
+            <i class="fa fa-star" aria-hidden="true"></i>
+            <i class="fa fa-star-half-o" aria-hidden="true"></i>
+            <p class="inline crta">|</p>
+            <i class="fa fa-comment" aria-hidden="true"></i>
+            <p class="inline">
+              436
+              <span
+                ><a
+                  class="reviews"
+                  href="https://www.google.com/search?ei=hkhoXOWXLK6XlwS8ypH4AQ&q=cornelius+%26+cylinder&oq=cornelius+%26+cylinder&gs_l=psy-ab.3..35i39l2j0l6j0i22i30l2.104.104..907...0.0..0.552.552.5-1......0....1..gws-wiz.......0i71.51lz8BMmUrU#lrd=0x475a7a9fdb7d2a55:0x8787a63d289e96f5,1,,,"
+                  >reviews</a
+                ></span
+              >
+            </p>
+            <h2 class="info-h2">Cornelius &amp; Cylinder</h2>
+            <p class="grey-p">restoran / kafe-bar</p>
+
+            <br />
+            <p class="info-p">
+              <span><i class="fa fa-map-marker" aria-hidden="true"></i></span
+              >Golsvordijeva 6, Beograd
+            </p>
+            <p class="info-p">
+              <span><i class="fa fa-clock-o" aria-hidden="true"></i></span
+              >08:00h - 01:00h
+            </p>
+            <p class="info-p">
+              <span><i class="fa fa-phone" aria-hidden="true"></i></span>011
+              4036499
+            </p>
+
+            <div class="logos">
+              <a href="https://www.facebook.com/cornelius.cylinder/"
+                ><i
+                  class="fa fa-facebook-official logo"
+                  aria-hidden="true"
+                ></i
+              ></a>
+              <a href="https://twitter.com/cornelinder"
+                ><i class="fa fa-twitter" aria-hidden="true"></i
+              ></a>
+              <a href="https://www.instagram.com/cornelius_cylinder/"
+                ><i class="fa fa-instagram" aria-hidden="true"></i
+              ></a>
+              <a
+                href="https://www.youtube.com/channel/UCFRDbxUN5TCokmgwxwPdrXg"
+                ><i class="fa fa-youtube-play" aria-hidden="true"></i
+              ></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="info-mapa">
+          <iframe
+            class="mapa"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2830.937302455145!2d20.473573215535374!3d44.80246637909865!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x475a7a9fdb7d2a55%3A0x8787a63d289e96f5!2sCornelius+%26+Cylinder!5e0!3m2!1ssr!2srs!4v1535113040000"
+            style="border:0"
+            allowfullscreen
+          ></iframe>
         </div>
       </div>
     </div>
