--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <ul class="nav-links">
           <li class="nav-li">
-            <a id="lang-about" class="nav-a click-boxes" href="index.html#boxes"
+            <a id="lang-about" class="nav-a click-boxes" href="about.html"
               >O NAMA</a
             >
           </li>
