--- a/menu.html
+++ b/menu.html
@@ -59,7 +59,92 @@
     </div>
   </nav>
 
-  
+  <section class="menu">
+    <div class="menu-image" id="breakfast">
+      <h2 class="image-h2 breakfast">DORUCAK</h2>
+    </div>
+    <div class="menu-container">
+      <h2 class="menu-h2 breakfast">DORUČAK</h2>
+      <div class="menu-row">
+        <div class="col">
+          <div class="menu-item">
+            <div class="items">
+              <p class="item-name" id="name58">PRŽENA JAJA SA SLANINOM</p>
+              <p class="item-price">335</p>
+            </div>
+            <div class="menu-desc">
+              <p class="desc-p" id="desc55">
+                hrskava slaninica, feta i paradajz (3 kom.)
+              </p>
+            </div>
+          </div>
+
+
+          <div class="menu-item">
+            <div class="items">
+              <p class="item-name" id="name59">OMLET SA ŠUNKOM</p>
+              <p class="item-price">325</p>
+            </div>
+            <div class="menu-desc">
+              <p class="desc-p" id="desc56">
+                feta, paradajz (3 kom.)
+              </p>
+            </div>
+          </div>
+
+          <div class="menu-item">
+            <div class="items">
+              <p class="item-name" id="name60">OMLET SA POVRĆEM</p>
+              <p class="item-price">315</p>
+            </div>
+            <div class="menu-desc">
+              <p class="desc-p" id="desc57">
+                paprika, tikvice, pečurke, paradajz, luk
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="menu-item">
+            <div class="items">
+              <a
+                href="/assets/img/french-toast.jpg"
+                data-lightbox="mygallery"
+                data-title="FRENCH TOAST">
+                <p class="item-name">FRENCH TOAST</p><i class="fa fa-camera-retro food-img" aria-hidden="true"></i>
+              </a>
+              
+              <p class="item-price">395</p>
+            </div>
+            <div class="menu-desc">
+              <p class="desc-p" id="desc58">
+                šunka, mozzarela
+              </p>
+            </div>
+          </div>
+
+          <div class="menu-item">
+            <div class="items">
+              <a
+                href="/assets/img/image00006.jpeg"
+                data-lightbox="mygallery"
+                data-title="PRŽENICE SA KAJMAKOM I AJVAROM">
+                <p class="item-name" id="name61">PRŽENICE SA KAJMAKOM I AJVAROM</p><i class="fa fa-camera-retro food-img" aria-hidden="true"></i>
+              </a>
+              
+              <p class="item-price">355</p>
+            </div>
+            <div class="menu-desc">
+              <p class="desc-p">
+                kajmak, ajvar
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <section class="menu">
     <div class="menu-image" id="main">
