--- a/index.html
+++ b/index.html
@@ -39,9 +39,7 @@
 
         <ul class="nav-links">
           <li class="nav-li">
-            <a id="lang-about" class="nav-a click-boxes" href="about.html"
-              >O NAMA</a
-            >
+            <a id="lang-about" class="nav-a" href="about.html">O NAMA</a>
           </li>
           <li class="nav-li">
             <a id="lang-menu" class="nav-a" href="menu.html">MENI</a>
