--- a/index.html
+++ b/index.html
@@ -257,10 +257,10 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.js"></script>
     <script src="assets/js/jquery-3.2.1.min.js"></script>
-    <!-- <script src="assets/js/anime.min.js"></script> -->
+    <script src="assets/js/anime.min.js"></script>
     <script type="text/javascript" src="assets/js/wow.js"></script>
     <script type="text/javascript" src="assets/js/app.js"></script>
     <script type="text/javascript" src="assets/js/translate-menu.js"></script>
-    <!-- <script type="text/javascript" src="assets/js/anime.js"></script> -->
+    <script type="text/javascript" src="assets/js/anime.js"></script>
   </body>
 </html>
