--- a/gallery.html
+++ b/gallery.html
@@ -267,6 +267,7 @@
     <script src="assets/js/anime.min.js"></script>
     <script src="assets/js/lightbox-plus-jquery.min.js"></script>
     <script type="text/javascript" src="assets/js/wow.js"></script>
+    <script type="text/javascript" src="assets/js/translate-menu.js"></script>
     <script type="text/javascript" src="assets/js/app.js"></script>
   </body>
 </html>
