--- a/about.html
+++ b/about.html
@@ -208,6 +208,7 @@
     <script src="assets/js/jquery-3.2.1.min.js"></script>
     <!-- <script src="assets/js/anime.min.js"></script> -->
     <script type="text/javascript" src="assets/js/wow.js"></script>
+    <script type="text/javascript" src="assets/js/translate-menu.js"></script>
     <script type="text/javascript" src="assets/js/app.js"></script>
     <!-- <script type="text/javascript" src="assets/js/anime.js"></script> -->
   </body>
