--- a/menu.html
+++ b/menu.html
@@ -589,7 +589,7 @@
 
   <section class="menu">
     <div class="menu-image" id="nacho">
-      <h2 class="image-h2" id="between">NESTO IZMEĐU</h2>
+      <h2 class="image-h2" id="between">NESTO IZMEDJU</h2>
     </div>
     <div class="menu-container">
       <h2 class="menu-h2" id="notReally">NE BAŠ GLAVNA JELA</h2>
