--- a/gallery.html
+++ b/gallery.html
@@ -34,7 +34,7 @@
           <a id="lang-about" class="nav-a" href="about.html">O NAMA</a>
         </li>
         <li class="nav-li">
-          <a id="lang-gallery" class="nav-a" href="menu.html">MENI</a>
+          <a id="lang-menu" class="nav-a" href="menu.html">MENI</a>
         </li>
         <li class="nav-li click-info">
           <a id="lang-contact" class="nav-a" href="gallery.html#info"
