--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
           <a id="lang-main" class="nav-a" href="index.html">NASLOVNA</a>
         </li>
         <li class="nav-li">
-          <a id="lang-about" class="nav-a" href="menu.html">MENI</a>
+          <a id="lang-menu" class="nav-a" href="menu.html">MENI</a>
         </li>
         <li class="nav-li">
           <a id="lang-gallery" class="nav-a" href="gallery.html">GALERIJA</a>
@@ -63,12 +63,12 @@
 
     <section id="about">
       <div class="about-image">
-        <h2 class="image-h2">ABOUT US</h2>
+        <h2 class="image-h2" id="aText1">O NAMA</h2>
       </div>
 
       <div class="abs-container">
         <div class="abs-content">
-          <h2 class="abs-h2">OUR STORY</h2>
+          <h2 class="abs-h2" id="aText2">NASA PRICA</h2>
           <p class="abs-p">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum omnis
             harum eos eius quasi aperiam distinctio, mollitia modi placeat
