--- a/index.html
+++ b/index.html
@@ -81,14 +81,12 @@
         <div class="row">
           <div class="boxes-image image-1"></div>
           <div class="boxes-content">
-            <h2 id="lang-text1" class="boxes-h2">TEKST</h2>
+            <h2 id="lang-text1" class="boxes-h2">JEDINSTVEN DEKOR</h2>
             <p class="boxes-p">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro in
-              dignissimos quibusdam sapiente quisquam eligendi perferendis, non
-              sit temporibus quaerat ab, totam, nemo dolore aut modi quam culpa
-              nihil a!
+              Cornelius & Cylinder je prvi Steampunk lokal u Srbiji, sa
+              nesvakidasnjim i autenticnim dekorom.
             </p>
-            <a href="about.html" class="boxes-btn">PROČITAJ VIŠE</a>
+            <a href="about.html" class="boxes-btn">NAŠA PRIČA</a>
           </div>
         </div>
       </div>
@@ -96,12 +94,9 @@
       <div class="flex-container">
         <div class="row">
           <div class="boxes-content">
-            <h2 class="boxes-h2">TEKST</h2>
+            <h2 class="boxes-h2">BASTA DALEKO OD BUKE ULICE</h2>
             <p class="boxes-p">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro in
-              dignissimos quibusdam sapiente quisquam eligendi perferendis, non
-              sit temporibus quaerat ab, totam, nemo dolore aut modi quam culpa
-              nihil a!
+              Izuzetna izdvojena basta kojoj ne smeta buka ulice.
             </p>
             <a href="#" class="boxes-btn">PROČITAJ VIŠE</a>
           </div>
@@ -131,10 +126,9 @@
         <div class="discover-item discover-food">
           <h2 class="discover-h2 wow fadeInUp">RESTORAN</h2>
           <p class="discover-p wow fadeInUp">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo dolores
-            voluptas dolorem voluptates voluptatibus alias enim dolor. Error
-            optio doloribus dignissimos nam facilis in ea, cum dicta non harum
-            cumque?
+            Uzivajte u najukusnijim specijalitetima nase kuhinje, od svezeg
+            dorucka za snazan pocetak dana, do bifteka, vise vrsta burgera,
+            svinjskih rebaraca, domacih kobasica do vedgies krompirica.
           </p>
           <a href="menu.html" class="discover-btn wow fadeInUp"
             >OTKRIJ NAŠ MENI</a
@@ -143,10 +137,9 @@
         <div class="discover-item discover-drinks">
           <h2 class="discover-h2 wow fadeInUp">KAFE-BAR</h2>
           <p class="discover-p wow fadeInUp">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo dolores
-            voluptas dolorem voluptates voluptatibus alias enim dolor. Error
-            optio doloribus dignissimos nam facilis in ea, cum dicta non harum
-            cumque?
+            Veliki izbor kafe, cedjenih sokova, koktela i zestokih pica, kao i
+            adekvatan izbor vina za svaku priliku. Za ljubitelje piva siroka
+            ponuda u tocilici i u flasicama, preko 40 vrsta!
           </p>
           <a href="menu-caffe.html" class="discover-btn wow fadeInUp"
             >KARTA PIĆA</a
@@ -169,7 +162,7 @@
               <p class="inline crta">|</p>
               <i class="fa fa-comment" aria-hidden="true"></i>
               <p class="inline">
-                  477
+                477
                 <span>reviews</span>
               </p>
               <h2 class="info-h2">Cornelius &amp; Cylinder</h2>
@@ -254,7 +247,6 @@
     <script src="assets/js/anime.min.js"></script>
     <script type="text/javascript" src="assets/js/wow.js"></script>
     <script type="text/javascript" src="assets/js/app.js"></script>
-    <script type="text/javascript" src="assets/js/translate-menu.js"></script>
     <script type="text/javascript" src="assets/js/anime.js"></script>
   </body>
 </html>
