--- a/about.html
+++ b/about.html
@@ -63,46 +63,46 @@
 
     <section id="about">
       <div class="about-image">
-        <h2 class="image-h2" id="aText1">O NAMA</h2>
+        <h2 id="abs-about" class="image-h2" id="aText1">O NAMA</h2>
       </div>
 
       <div class="abs-container">
         <div class="abs-content">
-          <h2 class="abs-h2" id="aText2">NASA PRICA</h2>
-          <p class="abs-p">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum omnis
-            harum eos eius quasi aperiam distinctio, mollitia modi placeat
-            quibusdam blanditiis illum est sapiente beatae fugiat quo
-            repudiandae ipsam molestias? Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Magnam necessitatibus magni vitae, fugiat sed
-            eaque autem facilis laborum delectus quod. Accusamus, nihil. Magni
-            enim numquam delectus, et libero sed recusandae. Lorem ipsum dolor,
-            sit amet consectetur adipisicing elit. Placeat, vel quam sint cum
-            consequatur tempore est libero provident itaque. Ipsa sed modi magni
-            vel porro aspernatur optio debitis.
+          <h2 class="abs-h2" id="abs-who">KO JE CORNELIUS?</h2>
+          <p id="abs-eng" class="abs-p">
+            Neobičan kadar nam je zaustavio dah tog jutra, dok smo čistili tavan
+            pradedine kuće na Vračaru. Na prašnjavom podu, u uglu, ležao je
+            prevrnut stari cilindar, a iz pocepane postave virilo je pismo.
+            Zbunjenost i radoznalost obojile su naša lica dok smo čitali sadržaj
+            požutele hartije. Izgledala je kao da pamti vekove.
+            <br />
+            <p id="abs-eng-2" class="abs-p"> "Moje ime je Cornelius. Rođen sam 3985. godine. Otkad znam za sebe
+            nosio sam uniformu Njenog veličanstva Avanture. Putovao sam kroz
+            zaboravljena vremena i upoznavao pustolovine svetova koji će tek
+            doći. U dokolici svoje neokoncive egzistencije bio sam pilot
+            nebeskih brodova, lovac, tkač, graditelj jedrenjaka, probni
+            kosmonaut, upravnik kraljevskih pošta i još štošta. Vojnik po
+            profesiji i umetnik u duši, uživao sam u pripremanju kulinarskih
+            remek-dela. Blistavi osmesi na licima drugova i ikonska sreća
+            zajedničkih poduhvata bile su moje najveće pobede i najdragoceniji
+            ratni plen. Sada sam komandant odbrane od dosade u Ministarstvu za
+            borbu protiv stereotipa. Ako ste pronašli moj šešir i u njemu ovo
+            pismo, došao je čas da pođete za mnom. Pozivam vas da zajedno,
+            nepobedivom snagom imaginacije, gradimo novu stvarnost. Izmislicemo
+            budućnost u kojoj bogatstvo više ne čini ono što imate, nego ono u
+            čemu uživate. Tamo ću vas čekati."
+            </p>
+            <p id="abs-eng-3" class="abs-p">
+            Prihvatili smo izazov. Na mestu gde je nekada stajala trošna kuća
+            podigli smo hram posvećen besmrtnom duhu prijateljstva, muzike,
+            finih ukusa i dobre zabave.
+            </p>
+             <span id="welcome">Dobrodošli u Cornelius & Cylinder</span>
           </p>
           <div class="abs-img"></div>
         </div>
       </div>
 
-      <div class="flex-about">
-        <div class="about-container">
-          <div class="about-image about-img-half"></div>
-          <div class="about-content">
-            <h2 class="about-h2">OUR STORY</h2>
-            <p class="about-p">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum
-              omnis harum eos eius quasi aperiam distinctio, mollitia modi
-              placeat quibusdam blanditiis illum est sapiente beatae fugiat quo
-              repudiandae ipsam molestias? Lorem ipsum dolor sit amet
-              consectetur adipisicing elit. Magnam necessitatibus magni vitae,
-              fugiat sed eaque autem facilis laborum delectus quod. Accusamus,
-              nihil. Magni enim numquam delectus, et libero sed recusandae.
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
 
     <section class="about-info" id="info">
       <div class="flex-container">
@@ -202,7 +202,7 @@
     <script src="assets/js/jquery-3.2.1.min.js"></script>
     <!-- <script src="assets/js/anime.min.js"></script> -->
     <script type="text/javascript" src="assets/js/wow.js"></script>
-    <script type="text/javascript" src="assets/js/translate-menu.js"></script>
+    <script type="text/javascript" src="assets/js/translate-about.js"></script>
     <script type="text/javascript" src="assets/js/app.js"></script>
     <!-- <script type="text/javascript" src="assets/js/anime.js"></script> -->
   </body>
